--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@pages/*": ["./src/pages/*"],
       "@utils/*": ["./src/utils/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@locale/*": ["./src/locale/*"],
       "@styles/*": ["./styles/*"]
     }
   },
